--- a/package.json
+++ b/package.json
@@ -1,29 +1,40 @@
 {
-  "name": "remoteworkers_page",
+  "name": "Evromed",
   "version": "1.0.0",
-  "description": "Тренировочный макет RemoteWorkers",
-  "main": "gulpfile.js",
-  "dependencies": {
-    "gulp-livereload": "^3.8.1",
-    "gulp-sass": "^2.3.2",
-    "gulp": "^3.9.1",
-    "gulp-connect": "^5.0.0",
-    "browser-sync": "^2.14.0"
-  },
-  "devDependencies": {
-    "gulp-autoprefixer": "^3.1.1"
-  },
+  "description": "Evromed",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "Glazachev Andrey",
+  "license": "ISC",
+  "devDependencies": {
+    "browser-sync": "^2.18.8",
+    "del": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-combine-mq": "^0.4.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-csso": "^3.0.0",
+    "gulp-imagemin": "^3.1.1",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-size": "^2.1.0",
+    "gulp-svg-sprite": "^1.3.6",
+    "gulp-uglifyjs": "^0.6.2",
+    "gulp-uncss": "^1.0.6",
+    "gulp-util": "^3.0.8",
+    "gulp.spritesmith": "^6.3.0",
+    "imagemin-pngquant": "^5.0.0",
+    "sass-mq": "^3.2.9"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alexapplecider/RemoteWorkers.git"
+    "url": "git+https://github.com/Stilon/Evromed.git"
   },
-  "author": "alexapplecider",
-  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/alexapplecider/RemoteWorkers/issues"
+    "url": "https://github.com/Stilon/Evromed/issues"
   },
-  "homepage": "https://github.com/alexapplecider/RemoteWorkers#readme"
+  "homepage": "https://github.com/Stilon/Evromed#readme"
 }
